--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "embla-carousel": "^8.0.0-rc14",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
+    "framer-motion": "^12.19.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
